# thinr-agent

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  release.yml
scripts/: install.sh
src/: main.cpp
src/thinger/: client.h
src/thinger/config/: config.cpp  config.hpp
src/thinger/monitor/: monitor.cpp  monitor.hpp
src/thinger/monitor/resources/: cpu.cpp  cpu.hpp  io.cpp  io.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp  storage.cpp  storage.hpp  system.cpp  system.hpp
src/thinger/system/: backup.h  restore.h
src/thinger/system/platform/: backup.h  restore.h
src/thinger/utils/: docker.h
src/thinger/utils/aws/: s3.h
src/thinr/agent/: agent.cpp  agent.hpp
src/thinr/auth/: auth_manager.cpp  auth_manager.hpp
src/thinr/cli/: argument_parser.cpp  argument_parser.hpp  command_handler.cpp  command_handler.hpp  service_manager.cpp  service_manager.hpp
src/thinr/config/: config_manager.cpp  config_manager.hpp
src/thinr/extensions/: monitoring.cpp  monitoring.hpp  scripts.cpp  scripts.hpp  updater.cpp  updater.hpp
src/thinr/installer/: base_service_installer.cpp  base_service_installer.hpp  installation_config.cpp  installation_config.hpp  interactive_setup.cpp  interactive_setup.hpp  service_installer.cpp  service_installer.hpp  service_installer_factory.cpp  service_installer_factory.hpp
src/thinr/installer/init_systems/: launchd_service_installer.cpp  launchd_service_installer.hpp  openrc_service_installer.cpp  openrc_service_installer.hpp  systemd_service_installer.cpp  systemd_service_installer.hpp  sysv_service_installer.cpp  sysv_service_installer.hpp  upstart_service_installer.cpp  upstart_service_installer.hpp
src/thinr/utils/: console.cpp  console.hpp  device_id_generator.cpp  device_id_generator.hpp  embedded_certs.hpp  ssl_config.cpp  ssl_config.hpp  system_info.cpp  system_info.hpp
